[ADD] update expedient and bug fixes